# commit-mirror

./: LICENSE  README.md  pyproject.toml
commit-mirror/: mirror.py
commit_mirror/: mirror.py
commit_mirror.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
